--- a/src/app/search-box/search-box.component.html
+++ b/src/app/search-box/search-box.component.html
@@ -1,4 +1,4 @@
 <div class="form-group col-md-6 mx-auto">
-    <label for="usr">Name:</label>
+    <label for="usr">Country:</label>
     <input class="form-control" type="text" #txtField/>
 </div>    
